# al-azif

./: .build.bat  .dockerignore  .env.example  .gitignore  .logs.bat  Cargo.toml  Dockerfile  LICENSE  README.md  config-example.toml  debug.bat  docker-compose.yml  flake.nix  release.bat  rustfmt.toml
al_azif_core/: Cargo.toml
al_azif_core/src/: _al_azif_core.rs  _macros.rs  _prelude.rs  battle.rs  bot.rs  component_args.rs  constants.rs  database.rs  dispute.rs  effect.rs  id.rs  lib.rs  mirror.rs  player.rs  prelude.rs  request_reaction.rs  response.rs  voice.rs
al_azif_core/src/event/: request_reaction.rs  roll.rs
al_azif_core/src/utils/: fmt.rs  parse_args.rs  roll.rs  serenity.rs
al_azif_events/: Cargo.toml
al_azif_events/src/: _al_azif_events.rs  _macros.rs  _prelude.rs  action.rs  component.rs  lib.rs  prefix.rs  prelude.rs  slash.rs
al_azif_events/src/unclassified/: receive.rs
al_azif_prefix/: Cargo.toml
al_azif_prefix/src/: _al_azif_prefix.rs  _prelude.rs  attack.rs  handler.rs  lib.rs  prelude.rs  setting.rs  utils.rs  validate.rs
al_azif_prefix/src/commands/: attack.rs  block.rs  dodge.rs  heal.rs  miracle.rs  receive.rs  rise.rs  vital_trill.rs  wave_attack.rs
al_azif_prefix/src/common/: attack.rs
al_azif_prefix/src/handlers/: attack.rs
al_azif_slash/: Cargo.toml
al_azif_slash/src/: _al_azif_slash.rs  _prelude.rs  battle.rs  exp.rs  id.rs  lib.rs  prelude.rs
al_azif_slash/src/commands/: battle.rs  calc.rs  exp.rs  help.rs  id.rs  ping.rs  voice.rs
al_azif_utils/: Cargo.toml
al_azif_utils/src/: _al_azif_utils.rs  calculator.rs  fmt.rs  lib.rs  math.rs  prelude.rs  roll.rs  serenity.rs
benches/: my_benchmark.rs
docker/: Dockerfile.debug  Dockerfile.release  docker-compose.yml
src/: bot.rs  config.rs  conflict.rs  conflict_member.rs  entity.rs  environment.rs  lib.rs  main.rs  mirror.rs  persistence.rs  prelude.rs  rehydration.rs
