[workspace]
members = ["al_azif_core", "al_azif_events", "al_azif_prefix", "al_azif_slash"]

[workspace.package]
authors = ["thou-vow"]
description = "A Discord bot with a Roleplaying Game system."
license = "MIT"
repository = "https://github.com/thou-vow/al-azif"
edition = "2021"

[workspace.dependencies]
al_azif_core.path = "./al_azif_core"
al_azif_events.path = "./al_azif_events"
al_azif_prefix.path = "./al_azif_prefix"
al_azif_slash.path = "./al_azif_slash"
ahash.version = "0.8.11"
ahash.default-features = false
anyhow.version = "1.0.86"
anyhow.default-features = false
audiopus.version = "0.2.0"
audiopus.default-features = false
audiopus.features = ["coder"]
const_format.version = "0.2.32"
const_format.default-features = false
rand.version = "0.8.5"
rand.default-features = false
reqwest.version = "0.12.5"
reqwest.default-features = false
reqwest.features = ["http2", "rustls-tls"]
rusty_ytdl.version = "0.7.4"
rusty_ytdl.default-features = false
rusty_ytdl.features = ["rustls-tls"]
serde.version = "1.0.207"
serde.default-features = false
serde.features = ["derive", "std"]
serenity.git = "https://github.com/serenity-rs/serenity"
serenity.branch = "next"
serenity.default-features = false
serenity.features = ["cache", "client", "gateway", "model", "rustls_backend", "voice"]
small-fixed-array.version = "0.4.5"
small-fixed-array.default-features = false
songbird.git = "https://github.com/serenity-rs/songbird"
songbird.branch = "serenity-next"
songbird.default-features = false
songbird.features = ["driver", "builtin-queue", "gateway", "rustls", "serenity", "tungstenite"]
symphonia.version = "0.5.4"
symphonia.default-features = false
symphonia.features = ["aac", "adpcm", "alac", "flac", "isomp4", "mkv", "mp3", "ogg", "pcm", "vorbis", "wav"]
thiserror.version = "1.0.63"
thiserror.default-features = false
tokio.version = "1.39.2"
tokio.default-features = false
tokio.features = ["rt-multi-thread"]
toml.version = "0.8.19"
toml.default-features = false
toml.features = ["display", "parse"]
tracing.version = "0.1.40"
tracing.default-features = false
tracing-subscriber.version = "0.3.18"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["ansi", "fmt"]

[package]
name = "al_azif"
edition.workspace = true

[[bin]]
name = "al_azif"
path = "src/main.rs"

[dependencies]
al_azif_core.workspace = true
al_azif_events.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serenity.workspace = true
songbird.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion = "0.5.1"
rand.workspace = true

[[bench]]
name = "my_benchmark"
harness = false

[profile.dev]
strip = true

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
lto = true
