[package]
name = "al-azif"
version = "0.1.0"
edition = "2024"

[dependencies]
rug = { version = "1.28.0", default-features = false, features = [
  "integer",
  "serde",
  "std",
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "sync",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.23.0"
