[package]
name = "al_azif_core"
edition.workspace = true

[lib]
path = "src/_al_azif_core.rs"

[dependencies]
ahash.workspace = true
anyhow.workspace = true
const_format.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true
serenity.workspace = true
small-fixed-array.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true