[package]
name = "al_azif_events"
edition.workspace = true

[lib]
path = "src/_al_azif_events.rs"

[dependencies]
al_azif_core.workspace = true
al_azif_prefix.workspace = true
al_azif_slash.workspace = true
anyhow.workspace = true
serenity.workspace = true
tokio.workspace = true
tracing.workspace = true