[package]
name = "al_azif_prefix"
edition.workspace = true

[lib]
path = "src/_al_azif_prefix.rs"

[dependencies]
al_azif_core.workspace = true
const_format.workspace = true
serenity.workspace = true
small-fixed-array.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true